Gen.alueet nimetty

--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -12,17 +12,17 @@
                             <h3>Valitse aihe *</h3>
                         </label>
                         <select name="aihe" id="aihe">
-                            <option value="aihe1">Geneerinen alue1</option>
-                            <option value="aihe2">Geneerinen alue2</option>
-                            <option value="aihe3">Geneerinen alue3</option>
-                            <option value="aihe4">Geneerinen alue4</option>
-                            <option value="aihe5">Geneerinen alue5</option>
-                            <option value="aihe6">Geneerinen alue6</option>
-                            <option value="aihe7">Geneerinen alue7</option>
-                            <option value="aihe8">Geneerinen alue8</option>
-                            <option value="aihe9">Geneerinen alue9</option>
-                            <option value="aihe10">Geneerinen alue10</option>
-                            <option value="aihe11">Geneerinen alue11</option>
+                            <option value="aihe1">Asiakaslähtöisyys</option>
+                            <option value="aihe2">Ohjaus- ja neuvontaosaaminen</option>
+                            <option value="aihe3">Palvelujärjestelmäosaaminen</option>
+                            <option value="aihe4">Lainsäädännön ja etiikan tuntemus</option>
+                            <option value="aihe5">Tutkimus- ja kehittämisosaaminen</option>
+                            <option value="aihe6">Robotiikka ja digitalisaatio</option>
+                            <option value="aihe7">Vaikuttavuus-, kustannus- ja laatutietoisuus</option>
+                            <option value="aihe8">Kestävän kehityksen mukainen ympäristöosaaminen</option>
+                            <option value="aihe9">Viestintäosaaminen</option>
+                            <option value="aihe10">Työntekijyysosaaminen</option>
+                            <option value="aihe11">Monialainen yhteistoiminta</option>
                         </select>
                     </td>
 
