API sql lausekkeitten yhdentäminen, käyttöliittymästä taustaväri pois

--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -17,7 +17,7 @@
                 <h3>Korkeakoulu</h3>
             <div class="selectBox">
                 <select>
-                  <option>Kaikki</option>
+                  <option>Valitse koulu(t)</option>
                 </select>
                 <div class="overSelect"></div>
                 <div  class="multipleSelect koulu" name="koulu" id="checkboxes1">
@@ -120,7 +120,7 @@
     var koulut = null;
     var avattu = false;
     var valittu = true;
-    var osoite = "http://127.0.0.1:5000"
+    var osoite = "http://137.74.119.216:5000"
 
     $(document).ready(function () {
 
